# pygserver

./: .gitattributes  .gitignore  README.md  pyproject.toml  run_server.py
.github/workflows/: ci.yml
levels/: qa_testlevel.nw  qa_tier3.nw
npcs/: example_npc.py  villager.py
pygserver/: __init__.py  __main__.py  account.py  baddy.py  combat.py  config.py  filesystem.py  gs1_host.py  horse.py  items.py  level.py  listserver.py  nc.py  npc.py  player.py  rc.py  server.py  tiletypes.py  weapon.py  world.py
pygserver/gs1/: interp.py
pygserver/protocol/: __init__.py  codec.py  constants.py  encryption.py  packets.py
pygserver/scripting/: __init__.py
tests/: __init__.py  test_arrow_pvp.py  test_baddy.py  test_baddy_hurt_wire.py  test_beer_quest_unblock.py  test_beta4_review_fixes.py  test_combat.py  test_death_respawn.py  test_gs1_hit_events.py  test_gs1_host.py  test_gs1_integration.py  test_gs1_interp.py  test_gs1_lexer.py  test_gs1_parser.py  test_gs1_resumable_sleep.py  test_gs1_stdlib.py  test_gs1_tiles.py  test_items.py  test_listserver_keepalive.py  test_player.py  test_profile_and_misc_handlers.py  test_protocol.py  test_rc_handlers.py  test_reborn_parity_cluster.py  test_sign_wire.py  test_throw_carried.py  test_weapon_add_packet.py
tools/: gen_gs1_tables.py  gs1_corpus_profile.py
